syntax = "proto2";

package proto.login_request;

message LoginRequestProto {
    required string username = 1;
    required string password = 2;
}