syntax = "proto2";

package proto.login_response;

message LoginResponseProto {
    required int32 user_id = 1;
    required bool success = 2;
}